# correct-atmosphere

./: .readthedocs.yaml  CLAUDE.md  README.md  README.rst  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
correct_atmosphere/: __init__.py  aerosols.py  constants.py  correction.py  downwelling.py  gases.py  glint.py  normalization.py  osoaa.py  outofband.py  polarization.py  rayleigh.py  transmittance.py  whitecaps.py
correct_atmosphere/data/Solar/: hybrid_reference_spectrum_1nm_resolution_c2022-11-30_with_unc.nc
correct_atmosphere/tests/: __init__.py  conftest.py  test_aerosols.py  test_constants.py  test_correction.py  test_downwelling.py  test_gases.py  test_glint.py  test_normalization.py  test_outofband.py  test_polarization.py  test_rayleigh.py  test_transmittance.py  test_whitecaps.py
dev/: correction_on_osoaa_output.py  osoaa_toa_dataset_no_rayleigh.json  osoaa_toa_dataset_std.json  osoaa_toa_simulation.py
docs/: Makefile  api.rst  conf.py  downwelling.rst  examples.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  theory.rst  tutorials.rst
docs/_static/: .gitkeep
nb/: 01_getting_started.ipynb  02_physical_components.ipynb  03_aerosols_transmittance.ipynb  04_full_correction.ipynb  05_downwelling_irradiance.ipynb  05_osoaa_toa_simulation.ipynb  06_osoaa_toa_simulation.ipynb  07_correction_on_osoaa_output.ipynb  osoaa_toa_dataset.json
prompts/: first_correction_nb.md
